Compilation and input/output redirection done in local editor.